# ruson-odm

./: .gitignore  Cargo.toml  README.md  a.py  pyprojec.toml  pyproject.toml
.github/workflows/: pypi.yml  test.yml
redbb-driver/: Cargo.toml  pyproject.toml
redbb-driver/python/redbb_driver/: __init__.py  client.py  collection.py  collection.pyi  database.py  database.pyi  results.py  results.pyi  types.py  types.pyi
redbb-driver/src/: interface.rs  lib.rs
redbb-driver/src/bindings/: bson_binding.rs  client_binding.rs  collection_binding.rs  database_biding.rs  document_binding.rs  index_binding.rs  mod.rs  results_binding.rs  utils.rs
ruson/: __init__.py  client.py  collection.py  database.py  results.py  results.pyi  types.py
ruson/core/: config.py  instance.py  ruson_doc.py
ruson/driver/: client.py  client.pyi  collection.py  collection.pyi  database.py  results.py  results.pyi  session.py  session.pyi  types.py  types.pyi
src/: interface.rs  lib.rs
src/bindings/: bson_binding.rs  client_binding.rs  collection_binding.rs  database_biding.rs  document_binding.rs  index_binding.rs  iterator_binding.rs  mod.rs  results_binding.rs  utils.rs
tests/: conftest.py
tests/test_core/: test_connection.py  test_count.py  test_delete.py  test_distinct.py  test_drop.py  test_find.py  test_indexes.py  test_insert.py  test_update.py  test_upsert.py
tests/test_driver/: test_client.py  test_collection.py  test_db.py
