[build-system]
requires = ["maturin>=1.3,<2.0", "patchelf"]
build-backend = "maturin"

[project]
name = "ruson"
authors = [
    { name = "João Severo", email = "contato@gmail.com" }
]
description = "Asynchronous MongoDB Driver Wrapper For Rust MongoDB crate"
requires-python = ">=3.9"
keywords = ["rust", "mongo", "driver", "database"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]