[build-system]
requires = ["maturin>=1.3,<2.0", "patchelf"]
build-backend = "maturin"

[project]
name = "redbb_driver"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]